--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="prof-box">
-	<img src="images/profile.jpg" class="prof-pic">
+	<img src="images/profile.JPG" class="prof-pic">
 	<h1>Jessica Mejia</h1>
 	<h4> Product Catalyst | Customer Success Proffesional</h4>
 
